Bug 1493482 - Add a redirection for CGDataProviderRelease, r=froydnj.

--HG--
extra : rebase_source : 2e3025c22b1efa78992707393d6cef7a63b090ce